--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "memory": 1024,
       "maxDuration": 10
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
