CHanges to Blog PAge UI and AUtocholarship finder user tracking system

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-three/drei": "10.6.1",
+    "@react-three/fiber": "9.3.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
@@ -66,10 +68,9 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.180.0",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-    "@react-three/fiber": "9.3.0",
-    "@react-three/drei": "10.6.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
