--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/babel__traverse": "^7.28.0",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
