--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-oauth/google": "^0.13.4",
     "@react-three/drei": "10.6.1",
     "@react-three/fiber": "9.3.0",
     "@supabase/supabase-js": "^2.55.0",
